js section added

--- a/home.html
+++ b/home.html
@@ -482,23 +482,23 @@
           Наши спецалисты самые лучшие и опытные в своём деле
         </p>
         <ul class="specialists-types">
-          <li><a href="#">Кардиолог</a></li>
-          <li><a href="#">Ревматолог</a></li>
-          <li><a href="#">Гинеколог</a></li>
-          <li><a href="#">Уролог</a></li>
-          <li><a href="#">Ортопед</a></li>
-          <li><a href="#">Невролог</a></li>
-          <li><a href="#">Хирург</a></li>
-          <li><a href="#">Лор</a></li>
-          <li><a href="#">Физиотерапевт</a></li>
-          <li><a href="#">Диагностика</a></li>
-          <li><a href="#">Кардиоревматолог</a></li>
-          <li><a href="#">Офтальмолог</a></li>
-          <li><a href="#">Эндокринолог</a></li>
-          <li><a href="#">Лаборатория</a></li>
-          <li><a href="#">Педиатр</a></li>
-          <li><a href="#">Массаж</a></li>
-          <li><a href="#">Невропатолог</a></li>
+          <li class="list-item active">Кардиолог</li>
+          <li class="list-item">Ревматолог</li>
+          <li class="list-item">Гинеколог</li>
+          <li class="list-item">Уролог</li>
+          <li class="list-item">Ортопед</li>
+          <li class="list-item">Невролог</li>
+          <li class="list-item">Хирург</li>
+          <li class="list-item">Лор</li>
+          <li class="list-item">Физиотерапевт</li>
+          <li class="list-item">Диагностика</li>
+          <li class="list-item">Кардиоревматолог</li>
+          <li class="list-item">Офтальмолог</li>
+          <li class="list-item">Эндокринолог</li>
+          <li class="list-item">Лаборатория</li>
+          <li class="list-item">Педиатр</li>
+          <li class="list-item">Массаж</li>
+          <li class="list-item">Невропатолог</li>
         </ul>
       </div>
       <div class="specialists-image">
@@ -514,26 +514,16 @@
         </p>
         <div class="advantages-content">
           <ul class="advantages-content__list">
-            <li class="active">
-              <p>1 .Профессионализм</p>
+            <li id="item1" class="list-item active">1 .Профессионализм</li>
+            <li id="item2" class="list-item">2 .Широкий спектр услуг</li>
+            <li id="item3" class="list-item">3 .Современное оборудование</li>
+            <li id="item4" class="list-item">4 .Высокий уровень обслуживания</li>
+            <li id="item5" class="list-item">
+              5 .Постоянное развитие в научно-практической сфере
             </li>
-            <li>
-              <p>2 .Широкий спектр услуг</p>
-            </li>
-            <li>
-              <p>3 .Современное оборудование</p>
-            </li>
-            <li>
-              <p>4 .Высокий уровень обслуживания</p>
-            </li>
-            <li>
-              <p>5 .Постоянное развитие в научно-практической сфере</p>
-            </li>
-            <li>
-              <p>6 .Акции и специальные предложения</p>
-            </li>
-            <li>
-              <p>7 .Терапевтическое и хирургические стационары</p>
+            <li id="item6" class="list-item">6 .Акции и специальные предложения</li>
+            <li id="item7" class="list-item">
+              7 .Терапевтическое и хирургические стационары
             </li>
           </ul>
           <div class="advantages-content__text">
