--- a/labaratory-inner.html
+++ b/labaratory-inner.html
@@ -165,16 +165,19 @@
         </div>
         <div class="accordion-content">
           <p>
-            Несмотря на широкий выбор методов консервативной терапии в лечении
-            ЛОР-органов, их применение не всегда приводит к устранению инфекции
-            и требует хирургического вмешательства для достижения полного
-            выздоровления. Кроме того, врожденные и приобретенные искривления
-            носовой перегородки, гипертрофии носовых раковин, врожденная
-            склонность к разрастанию лимфоидной ткани, некоторые последствия
-            травм могут быть устранены только с помощью операции.
-            Хирург-отоларинголог — врач высшей квалификационной категории,
-            который занимается хирургическим лечением патологий ЛОР-органов. В
-            компетенцию специалиста входят такие оперативные вмешательства как:
+            <strong>Гидрокортизон (кортизол).</strong> Данный анализ показан при
+            аномальной пигментации кожных покровов, мышечной слабости,
+            остеопорозе и т. д.
+          </p>
+
+          <p>
+            <strong>Свободный кортизол (в моче). </strong>Исследование
+            проводится в рамках диагностики синдрома Иценко-Кушинга.
+          </p>
+          <p>
+            <strong>АКТГ.</strong> Гормональные анализы данного типа проводятся
+            при артериальной гипертензии, синдроме хронической усталости, а
+            также надпочечниковой недостаточности.
           </p>
         </div>
       </div>
@@ -191,16 +194,19 @@
         </div>
         <div class="accordion-content">
           <p>
-            Несмотря на широкий выбор методов консервативной терапии в лечении
-            ЛОР-органов, их применение не всегда приводит к устранению инфекции
-            и требует хирургического вмешательства для достижения полного
-            выздоровления. Кроме того, врожденные и приобретенные искривления
-            носовой перегородки, гипертрофии носовых раковин, врожденная
-            склонность к разрастанию лимфоидной ткани, некоторые последствия
-            травм могут быть устранены только с помощью операции.
-            Хирург-отоларинголог — врач высшей квалификационной категории,
-            который занимается хирургическим лечением патологий ЛОР-органов. В
-            компетенцию специалиста входят такие оперативные вмешательства как:
+            <strong>Гидрокортизон (кортизол).</strong> Данный анализ показан при
+            аномальной пигментации кожных покровов, мышечной слабости,
+            остеопорозе и т. д.
+          </p>
+
+          <p>
+            <strong>Свободный кортизол (в моче). </strong>Исследование
+            проводится в рамках диагностики синдрома Иценко-Кушинга.
+          </p>
+          <p>
+            <strong>АКТГ.</strong> Гормональные анализы данного типа проводятся
+            при артериальной гипертензии, синдроме хронической усталости, а
+            также надпочечниковой недостаточности.
           </p>
         </div>
       </div>
@@ -217,16 +223,19 @@
         </div>
         <div class="accordion-content">
           <p>
-            Несмотря на широкий выбор методов консервативной терапии в лечении
-            ЛОР-органов, их применение не всегда приводит к устранению инфекции
-            и требует хирургического вмешательства для достижения полного
-            выздоровления. Кроме того, врожденные и приобретенные искривления
-            носовой перегородки, гипертрофии носовых раковин, врожденная
-            склонность к разрастанию лимфоидной ткани, некоторые последствия
-            травм могут быть устранены только с помощью операции.
-            Хирург-отоларинголог — врач высшей квалификационной категории,
-            который занимается хирургическим лечением патологий ЛОР-органов. В
-            компетенцию специалиста входят такие оперативные вмешательства как:
+            <strong>Гидрокортизон (кортизол).</strong> Данный анализ показан при
+            аномальной пигментации кожных покровов, мышечной слабости,
+            остеопорозе и т. д.
+          </p>
+
+          <p>
+            <strong>Свободный кортизол (в моче). </strong>Исследование
+            проводится в рамках диагностики синдрома Иценко-Кушинга.
+          </p>
+          <p>
+            <strong>АКТГ.</strong> Гормональные анализы данного типа проводятся
+            при артериальной гипертензии, синдроме хронической усталости, а
+            также надпочечниковой недостаточности.
           </p>
         </div>
       </div>
