--- a/home.html
+++ b/home.html
@@ -514,15 +514,15 @@
         </p>
         <div class="advantages-content">
           <ul class="advantages-content__list">
-            <li id="item1" class="list-item active">1 .Профессионализм</li>
-            <li id="item2" class="list-item">2 .Широкий спектр услуг</li>
-            <li id="item3" class="list-item">3 .Современное оборудование</li>
-            <li id="item4" class="list-item">4 .Высокий уровень обслуживания</li>
-            <li id="item5" class="list-item">
+            <li class="list-item active">1 .Профессионализм</li>
+            <li class="list-item">2 .Широкий спектр услуг</li>
+            <li class="list-item">3 .Современное оборудование</li>
+            <li class="list-item">4 .Высокий уровень обслуживания</li>
+            <li class="list-item">
               5 .Постоянное развитие в научно-практической сфере
             </li>
-            <li id="item6" class="list-item">6 .Акции и специальные предложения</li>
-            <li id="item7" class="list-item">
+            <li class="list-item">6 .Акции и специальные предложения</li>
+            <li class="list-item">
               7 .Терапевтическое и хирургические стационары
             </li>
           </ul>
