--- a/contact.html
+++ b/contact.html
@@ -252,7 +252,7 @@
 
           <p>Связаться</p>
           <div class="card-social">
-            <a href="#">
+            <a class="telegram" href="#">
               <svg
                 width="36"
                 height="36"
@@ -266,7 +266,7 @@
                 />
               </svg>
             </a>
-            <a href="#"
+            <a class="instagram" href="#"
               ><svg
                 width="36"
                 height="36"
@@ -295,7 +295,7 @@
                 </defs>
               </svg>
             </a>
-            <a href="#"
+            <a class="facebook" href="#"
               ><svg
                 width="36"
                 height="36"
@@ -313,7 +313,7 @@
                 />
               </svg>
             </a>
-            <a href="#"
+            <a class="youtube" href="#"
               ><svg
                 width="36"
                 height="36"
