--- a/feedback.html
+++ b/feedback.html
@@ -7,8 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet" />
+    <link
       rel="stylesheet"
-    />
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./css/feedback.css" />
     <title>Feedback</title>
   </head>
@@ -59,22 +61,21 @@
           <input type="text" placeholder="Поиск по сайту" />
         </div>
 
-
-        <div class="navigation-language"  >
+        <div class="navigation-language">
           <div class="default-language">
             <img src="./images/icon-flag-ru.png" alt="icon-language" />
-              Русский
+            Русский
             <img
               src="./images/vector-to-bottom.png"
-              alt="vector to vector-to-bottom"
-            />
+              alt="vector to vector-to-bottom" />
           </div>
           <div class="other-languages">
             <ul>
               <li class="language">
                 <a href="#"
                   ><img src="./images/icon-flag-uzb.png" alt="icon-language" />
-                  O'zbek
+                  O'zbek</a
+                >
               </li>
               <li class="language">
                 <a href="#"
@@ -275,8 +276,7 @@
               type="text"
               id="name"
               required="true"
-              placeholder="Ваше имя*"
-            />
+              placeholder="Ваше имя*" />
           </div>
           <div class="form-input__phone">
             <label for="phone"></label>
@@ -286,8 +286,7 @@
               id="phone"
               name="phone"
               required="true"
-              placeholder="Номер телефона*"
-            />
+              placeholder="Номер телефона*" />
           </div>
           <div class="form-input__email">
             <label for="email"></label>
@@ -296,8 +295,7 @@
               type="text"
               id="email"
               required="true"
-              placeholder="Ваш e-mail"
-            />
+              placeholder="Ваш e-mail" />
           </div>
         </div>
         <div class="form-comment">
@@ -305,8 +303,7 @@
             name="comment"
             id="comment"
             required="true"
-            placeholder="Пишите ваш отзыв*"
-          ></textarea>
+            placeholder="Пишите ваш отзыв*"></textarea>
         </div>
 
         <div class="form-button">
@@ -317,16 +314,14 @@
                 height="16"
                 viewBox="0 0 16 16"
                 fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
+                xmlns="http://www.w3.org/2000/svg">
                 <g id="vuesax/bold/message-edit">
                   <g id="vuesax/bold/message-edit_2">
                     <g id="message-edit">
                       <path
                         id="Vector"
                         d="M10.6654 1.33325H5.33203C2.66536 1.33325 1.33203 2.66659 1.33203 5.33325V13.9999C1.33203 14.3666 1.63203 14.6666 1.9987 14.6666H10.6654C13.332 14.6666 14.6654 13.3333 14.6654 10.6666V5.33325C14.6654 2.66659 13.332 1.33325 10.6654 1.33325ZM7.40536 11.1066C7.2387 11.2733 6.93203 11.4266 6.70537 11.4599L5.3187 11.6533C5.26536 11.6599 5.21203 11.6666 5.16536 11.6666C4.93203 11.6666 4.7187 11.5866 4.56536 11.4333C4.3787 11.2466 4.2987 10.9733 4.34536 10.6799L4.5387 9.29325C4.57203 9.06659 4.72536 8.75325 4.89203 8.59325L7.40536 6.07992C7.44536 6.19992 7.4987 6.31992 7.5587 6.45325C7.6187 6.57325 7.6787 6.69325 7.74536 6.80659C7.7987 6.89992 7.8587 6.99325 7.91203 7.05992C7.9787 7.15992 8.04536 7.24659 8.09203 7.29325C8.1187 7.33325 8.14536 7.35992 8.15203 7.37325C8.2987 7.53992 8.45203 7.69992 8.5987 7.81992C8.6387 7.85992 8.66536 7.87992 8.67203 7.88659C8.7587 7.95325 8.8387 8.02659 8.9187 8.07325C9.00536 8.13992 9.0987 8.19992 9.19203 8.25325C9.30536 8.31992 9.42536 8.38659 9.55203 8.44659C9.6787 8.50659 9.7987 8.55325 9.9187 8.59325L7.40536 11.1066ZM11.032 7.48659L10.512 8.00659C10.4787 8.03992 10.432 8.05992 10.3854 8.05992C10.372 8.05992 10.3454 8.05992 10.332 8.05325C9.18536 7.72659 8.27203 6.81325 7.94536 5.66659C7.92536 5.60659 7.94536 5.53992 7.99203 5.49325L8.5187 4.96659C9.3787 4.10659 10.192 4.12659 11.032 4.96659C11.4587 5.39325 11.672 5.80659 11.6654 6.23325C11.6654 6.65325 11.4587 7.05992 11.032 7.48659Z"
-                        fill="black"
-                      />
+                        fill="black" />
                     </g>
                   </g>
                 </g>
@@ -341,16 +336,14 @@
                 height="20"
                 viewBox="0 0 20 20"
                 fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
+                xmlns="http://www.w3.org/2000/svg">
                 <g id="vuesax/outline/paperclip-2">
                   <g id="vuesax/outline/paperclip-2_2">
                     <g id="paperclip-2">
                       <path
                         id="Vector"
                         d="M10.2742 17.7834C9.36589 17.7834 8.45755 17.4417 7.76588 16.75C6.38255 15.3667 6.38255 13.125 7.76588 11.7417L9.83255 9.68338C10.0742 9.44172 10.4742 9.44172 10.7159 9.68338C10.9576 9.92505 10.9576 10.325 10.7159 10.5667L8.64922 12.625C7.75755 13.5167 7.75755 14.975 8.64922 15.8667C9.54089 16.7584 10.9992 16.7584 11.8909 15.8667L15.1326 12.625C16.1159 11.6417 16.6576 10.3334 16.6576 8.94171C16.6576 7.55005 16.1159 6.24172 15.1326 5.25838C13.0992 3.22505 9.79922 3.22505 7.76588 5.25838L4.23255 8.79172C3.40755 9.61672 2.94922 10.7167 2.94922 11.8834C2.94922 13.05 3.40755 14.15 4.23255 14.975C4.47422 15.2167 4.47422 15.6167 4.23255 15.8584C3.99089 16.1 3.59089 16.1 3.34922 15.8584C2.29089 14.7917 1.69922 13.3834 1.69922 11.8834C1.69922 10.3834 2.28255 8.96671 3.34922 7.90838L6.88255 4.37505C9.39922 1.85838 13.4992 1.85838 16.0159 4.37505C17.2326 5.59172 17.9076 7.21671 17.9076 8.94171C17.9076 10.6667 17.2326 12.2917 16.0159 13.5084L12.7742 16.75C12.0826 17.4417 11.1826 17.7834 10.2742 17.7834Z"
-                        fill="#292D32"
-                      />
+                        fill="#292D32" />
                     </g>
                   </g>
                 </g>
@@ -363,45 +356,48 @@
       </form>
     </div>
 
-    <div class="licenses container">
+    <div class="licenses container swiper">
       <h1 class="licenses-title">Лицензии и сертификаты</h1>
-      <div class="licenses-content">
-        <img src="./images/home/certificate.png" alt="certificate" />
-        <img src="./images/home/certificate.png" alt="certificate" />
-        <img src="./images/home/certificate.png" alt="certificate" />
-        <img src="./images/home/certificate.png" alt="certificate" />
-      </div>
-      <div class="place-for-pagination">
-        <svg
-          width="14"
-          height="22"
-          viewBox="0 0 14 22"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            id="Vector 2"
-            d="M12 2L3 11L12 20"
-            stroke="white"
-            stroke-width="3"
-          />
-        </svg>
 
-        <p>12 <span class="line"></span>19</p>
-        <svg
-          width="14"
-          height="22"
-          viewBox="0 0 14 22"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            id="Vector 3"
-            d="M2 2L11 11L2 20"
-            stroke="white"
-            stroke-width="3"
-          />
-        </svg>
+      <div class="slide-content mySwiper">
+        <div class="card-wrapper swiper-wrapper">
+          <img
+            class="swiper-slide"
+            src="./images/home/certificate.png"
+            alt="certificate" />
+          <img
+            class="swiper-slide"
+            src="./images/home/certificate.png"
+            alt="certificate" />
+          <img
+            class="swiper-slide"
+            src="./images/home/certificate.png"
+            alt="certificate" />
+          <img
+            class="swiper-slide"
+            src="./images/home/certificate.png"
+            alt="certificate" />
+          <img
+            class="swiper-slide"
+            src="./images/home/certificate.png"
+            alt="certificate" />
+          <img
+            class="swiper-slide"
+            src="./images/home/certificate.png"
+            alt="certificate" />
+          <img
+            class="swiper-slide"
+            src="./images/home/certificate.png"
+            alt="certificate" />
+          <img
+            class="swiper-slide"
+            src="./images/home/certificate.png"
+            alt="certificate" />
+        </div>
+
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
       </div>
     </div>
 
@@ -482,12 +478,12 @@
       <img
         class="background-image"
         src="./images/logo-viva-background.png"
-        alt="logo background"
-      />
+        alt="logo background" />
     </div>
 
     <script src="./js/accardion.js"></script>
     <script src="./js/mobileMenu.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script>
       window.onscroll = function () {
         myFunction();
@@ -508,6 +504,35 @@
           feedbackPage.style.paddingTop = "0";
         }
       }
+
+      const swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        freeMode: true,
+        loop: true,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+
+        breakpoints: {
+          500: {
+            slidesPerView: 1,
+          },
+          768: {
+            slidesPerView: 2,
+          },
+          1024: {
+            slidesPerView: 3,
+          },
+          1360: {
+            slidesPerView: 4,
+          },
+        },
+      });
     </script>
   </body>
 </html>
