--- a/labaratory-inner.html
+++ b/labaratory-inner.html
@@ -7,13 +7,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="./css/labaratory.css" />
     <title>Labaratory</title>
   </head>
+  
   <body>
-    
     <div class="header-wrapper">
       <div class="header container">
         <div class="header-logo">
@@ -59,21 +58,21 @@
           <input type="text" placeholder="Поиск по сайту" />
         </div>
 
-        <div class="navigation-language"  >
+        <div class="navigation-language">
           <div class="default-language">
             <img src="./images/icon-flag-ru.png" alt="icon-language" />
-              Русский
+            Русский
             <img
               src="./images/vector-to-bottom.png"
-              alt="vector to vector-to-bottom"
-            />
+              alt="vector to vector-to-bottom" />
           </div>
           <div class="other-languages">
             <ul>
               <li class="language">
                 <a href="#"
                   ><img src="./images/icon-flag-uzb.png" alt="icon-language" />
-                  O'zbek
+                  O'zbek</a
+                >
               </li>
               <li class="language">
                 <a href="#"
@@ -337,8 +336,7 @@
       <img
         class="background-image"
         src="./images/logo-viva-background.png"
-        alt="logo background"
-      />
+        alt="logo background" />
     </div>
 
     <script src="./js/accardion.js"></script>
