--- a/cooperation.html
+++ b/cooperation.html
@@ -7,8 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="./css/cooperation.css" />
     <title>Cooperation</title>
   </head>
@@ -56,21 +55,21 @@
           <img src="./images/icon-search.png" alt="search icon" />
           <input type="text" placeholder="Поиск по сайту" />
         </div>
-        <div class="navigation-language" >
+        <div class="navigation-language">
           <div class="default-language">
             <img src="./images/icon-flag-ru.png" alt="icon-language" />
-              Русский
+            Русский
             <img
               src="./images/vector-to-bottom.png"
-              alt="vector to vector-to-bottom"
-            />
+              alt="vector to vector-to-bottom" />
           </div>
           <div class="other-languages">
             <ul>
               <li class="language">
                 <a href="#"
                   ><img src="./images/icon-flag-uzb.png" alt="icon-language" />
-                  O'zbek
+                  O'zbek</a
+                >
               </li>
               <li class="language">
                 <a href="#"
@@ -108,8 +107,7 @@
                 type="text"
                 id="name"
                 required="true"
-                placeholder="Ваше имя и фамилия"
-              />
+                placeholder="Ваше имя и фамилия" />
             </div>
             <div class="form-input__phone">
               <label for="phone">Номер телефона или e-mail аддресс</label>
@@ -119,8 +117,7 @@
                 id="phone"
                 name="phone"
                 required="true"
-                placeholder="Пишите свой номер или email-аддресс"
-              />
+                placeholder="Пишите свой номер или email-аддресс" />
             </div>
           </div>
           <div class="form-input__message">
@@ -128,8 +125,7 @@
             <textarea
               class="input-message"
               id="form-message"
-              placeholder="Пишите сообщение"
-            ></textarea>
+              placeholder="Пишите сообщение"></textarea>
           </div>
 
           <div class="form-button">
@@ -143,16 +139,14 @@
                   height="20"
                   viewBox="0 0 20 20"
                   fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
+                  xmlns="http://www.w3.org/2000/svg">
                   <g id="vuesax/outline/paperclip-2">
                     <g id="vuesax/outline/paperclip-2_2">
                       <g id="paperclip-2">
                         <path
                           id="Vector"
                           d="M10.2742 17.7834C9.36589 17.7834 8.45755 17.4417 7.76588 16.75C6.38255 15.3667 6.38255 13.125 7.76588 11.7417L9.83255 9.68338C10.0742 9.44172 10.4742 9.44172 10.7159 9.68338C10.9576 9.92505 10.9576 10.325 10.7159 10.5667L8.64922 12.625C7.75755 13.5167 7.75755 14.975 8.64922 15.8667C9.54089 16.7584 10.9992 16.7584 11.8909 15.8667L15.1326 12.625C16.1159 11.6417 16.6576 10.3334 16.6576 8.94171C16.6576 7.55005 16.1159 6.24172 15.1326 5.25838C13.0992 3.22505 9.79922 3.22505 7.76588 5.25838L4.23255 8.79172C3.40755 9.61672 2.94922 10.7167 2.94922 11.8834C2.94922 13.05 3.40755 14.15 4.23255 14.975C4.47422 15.2167 4.47422 15.6167 4.23255 15.8584C3.99089 16.1 3.59089 16.1 3.34922 15.8584C2.29089 14.7917 1.69922 13.3834 1.69922 11.8834C1.69922 10.3834 2.28255 8.96671 3.34922 7.90838L6.88255 4.37505C9.39922 1.85838 13.4992 1.85838 16.0159 4.37505C17.2326 5.59172 17.9076 7.21671 17.9076 8.94171C17.9076 10.6667 17.2326 12.2917 16.0159 13.5084L12.7742 16.75C12.0826 17.4417 11.1826 17.7834 10.2742 17.7834Z"
-                          fill="#292D32"
-                        />
+                          fill="#292D32" />
                       </g>
                     </g>
                   </g>
@@ -230,13 +224,11 @@
               <img
                 class="white-logo"
                 src="./images/rteco-logo-white.png"
-                alt="white rteco logo"
-              />
+                alt="white rteco logo" />
               <img
                 class="color-logo"
                 src="./images/rteco-logo-color.png"
-                alt="color rteco logo"
-              />
+                alt="color rteco logo" />
             </a>
           </div>
         </div>
@@ -245,8 +237,7 @@
       <img
         class="background-image"
         src="./images/logo-viva-background.png"
-        alt="logo background"
-      />
+        alt="logo background" />
     </div>
 
     <script src="./js/mobileMenu.js"></script>
