--- a/services-inner.html
+++ b/services-inner.html
@@ -7,8 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="./css/services.css" />
     <title>Services inner</title>
   </head>
@@ -59,21 +58,21 @@
           <input type="text" placeholder="Поиск по сайту" />
         </div>
 
-        <div class="navigation-language"  >
+        <div class="navigation-language">
           <div class="default-language">
             <img src="./images/icon-flag-ru.png" alt="icon-language" />
-              Русский
+            Русский
             <img
               src="./images/vector-to-bottom.png"
-              alt="vector to vector-to-bottom"
-            />
+              alt="vector to vector-to-bottom" />
           </div>
           <div class="other-languages">
             <ul>
               <li class="language">
                 <a href="#"
                   ><img src="./images/icon-flag-uzb.png" alt="icon-language" />
-                  O'zbek
+                  O'zbek</a
+                >
               </li>
               <li class="language">
                 <a href="#"
@@ -362,14 +361,12 @@
           height="22"
           viewBox="0 0 14 22"
           fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
+          xmlns="http://www.w3.org/2000/svg">
           <path
             id="Vector 2"
             d="M12 2L3 11L12 20"
             stroke="white"
-            stroke-width="3"
-          />
+            stroke-width="3" />
         </svg>
 
         <p>12 <span class="line"></span>19</p>
@@ -378,14 +375,12 @@
           height="22"
           viewBox="0 0 14 22"
           fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
+          xmlns="http://www.w3.org/2000/svg">
           <path
             id="Vector 3"
             d="M2 2L11 11L2 20"
             stroke="white"
-            stroke-width="3"
-          />
+            stroke-width="3" />
         </svg>
       </div>
     </div>
@@ -467,8 +462,7 @@
       <img
         class="background-image"
         src="./images/logo-viva-background.png"
-        alt="logo background"
-      />
+        alt="logo background" />
     </div>
 
     <script src="./js/accardion.js"></script>
