input type file section changed

--- a/contact.html
+++ b/contact.html
@@ -458,7 +458,7 @@
                     </g>
                   </g>
                 </svg>
-                <input type="file" />
+                <input type="file" id="myfile" name="myfile"/>
                 Прикрепить файл
               </label>
             </div>
