--- a/feedback.html
+++ b/feedback.html
@@ -348,7 +348,7 @@
                   </g>
                 </g>
               </svg>
-              <input type="text" />
+              <input type="file" id="myfile" name="myfile" />
               Прикрепить файл
             </label>
           </div>
