open class removed from accordion

--- a/services-inner.html
+++ b/services-inner.html
@@ -111,7 +111,7 @@
 
     <div class="information-box container">
       <div class="accordion-wrapper">
-        <div class="accordion open" id="accordion">
+        <div class="accordion" id="accordion">
           <div class="accordion-header">
             <h1 class="accordion-header__title">Биопсия ЛОР-органов</h1>
             <div class="accordion-header__icon">
